[package]
name = "fl"
authors = ["Ella Pash"]
description = "Float Launcher: A tui application launcher."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.25", features = ["derive"] }
dirs = "4.0.0"
file-lock = "2.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui = "0.19"
crossterm = "0.25"
